# PicoBoot-BT

./: .gitignore  .gitmodules  CMakeLists.txt
src/: gamecube.c  gamecube.h  intercore.c  intercore.h  joybus.pio  main.c  my_platform.c  picoboot.c  picoboot.pio  sdkconfig.h  types.h
